# lorawan-storage

./: CMakeLists.txt  CONTRIBUTING.md  LogIntf.h  Makefile.am  README.md  cli-helper.cpp  cli-helper.h  cli-main.cpp  cli-print.cpp  cli-query-main.cpp  cli-query-plugin-main.cpp  cli-tag.cpp  configure.ac  direct-client.h  file-helper.cpp  file-helper.h  gateway-client.h  gateway-identity.cpp  gateway-identity.h  gateway-listener.h  gateway-serialization.cpp  gateway-serialization.h  gateway-service-mem.cpp  gateway-service-mem.h  gateway-service-sqlite.cpp  gateway-service-sqlite.h  gateway-service.cpp  gateway-service.h  identity-serialization.cpp  identity-serialization.h  identity-service-gen.cpp  identity-service-gen.h  identity-service-mem.cpp  identity-service-mem.h  identity-service-sqlite.cpp  identity-service-sqlite.h  identity-service.cpp  identity-service.h  ip-address.cpp  ip-address.h  (+32 more)
doc/: README.daemon.md  copy.sh  lorawan-service.service
esp32/: CMakeLists.txt  esp32-main.cpp  esp32-storage.cpp  platform-defs.h
examples/: example-gen.cpp  example-json.cpp
lorawan/: lorawan-error.h  lorawan-mac.h  lorawan-packet-storage.cpp  lorawan-string.cpp  lorawan-string.h  lorawan-types.cpp  lorawan-types.h
lorawan/helper/: aes-helper.cpp  aes-helper.h  crc-helper.cpp  crc-helper.h  file-helper.cpp  ip-helper.cpp  ip-helper.h  key128gen.cpp  lmdb-helper.cpp
lorawan/storage/: gateway-identity.cpp  network-identity.cpp
lorawan/storage/client/: direct-client.h  plugin-client.cpp  plugin-client.h  plugin-query-client.cpp  plugin-query-client.h  query-client.cpp  query-client.h  response-client.h  service-client.cpp  service-client.h  sync-query-client.cpp  udp-client.cpp  udp-client.h  uv-client.cpp  uv-client.h
lorawan/storage/listener/: http-listener.cpp  http-listener.h  storage-listener.h  udp-listener.cpp  udp-listener.h  uv-listener.cpp  uv-listener.h
lorawan/storage/serialization/: gateway-serialization.cpp  gateway-serialization.h  gateway-text-json-serialization.cpp  gateway-text-json-serialization.h  identity-binary-serialization.cpp  identity-binary-serialization.h  identity-serialization.cpp  identity-serialization.h  identity-text-json-serialization.cpp  identity-text-json-serialization.h  identity-text-urn-serialization.cpp  json-helper.cpp  json-helper.h  qr-helper.cpp  qr-helper.h  service-serialization.cpp  service-serialization.h  urn-helper.cpp  urn-helper.h
lorawan/storage/service/: async-wrapper-gateway-service.cpp  async-wrapper-gateway-service.h  async-wrapper-identity-service.cpp  async-wrapper-identity-service.h  gateway-service-json.cpp  gateway-service-json.h  gateway-service-lmdb.cpp  gateway-service-lmdb.h  gateway-service-mem.cpp  gateway-service-mem.h  gateway-service-sqlite.cpp  gateway-service-sqlite.h  gateway-service.h  identity-service-c-wrapper.cpp  identity-service-c-wrapper.h  identity-service-gen.cpp  identity-service-gen.h  identity-service-json.cpp  identity-service-json.h  identity-service-lmdb.cpp  identity-service-lmdb.h  identity-service-mem.cpp  identity-service-mem.h  identity-service-sqlite.cpp  identity-service-sqlite.h  identity-service-udp.cpp  identity-service-udp.h  identity-service.cpp  identity-service.h
lorawan/wrapper/: connector-identity-serialization.cpp  connector-identity-serialization.h
main/: CMakeLists.txt  esp32-storage.cpp
po/: lorawan-identity-query.ru_RU.UTF-8.po  lorawan-identity-service.ru_RU.UTF-8.po  lorawan-storage.pot  lorawan-tag.ru_RU.UTF-8.po
systemd/: README.daemon.md
tests/: CMakeLists.txt  test-heatshrink.cpp  test-identity-service.c  test-miniz.cpp  test-parse-packet.cpp
tests/json/: json-list-id.bat
tools/: update-translation.sh
